test/sema/return-array-with-wrong-size.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

int[1] foo() {
    int[2] buffer = undefined;
    // CHECK: [[@LINE+1]]:5: error: mismatching return type 'int[2]', expected 'int[1]'
    return buffer;
}
